# Aruco-with-Python

./: README.md
aruco_testproject/: CMakeLists.txt  CMakeLists.txt~  TestPyAruco.cpp  aruco_simple.cpp  aruco_simple.cpp~
